# SocketQaBot

./: README.md
app/: .gitignore  README.md  pubspec.yaml
app/android/app/: build.gradle
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/billy8787/app/: MainActivity.kt
app/android/app/src/main/kotlin/com/billy8787/qabot/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/bloc/: chat_bloc.dart  chat_event.dart  chat_state.dart
app/lib/models/: message.dart
app/lib/providers/: theme_provider.dart
app/lib/services/: chat_service.dart  chat_storage_service.dart  stt_service.dart  tts_service.dart
app/lib/views/: chat_view.dart  settings_view.dart
app/lib/widgets/: chat_drawer.dart  tts_button.dart
app/linux/: CMakeLists.txt
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/runner/: Runner.rc
server/: .gitignore  CMakeLists.txt
server/include/: socket.hpp  thread_pool_singleton.hpp  type.hpp  unix_socket_impl.hpp  windows_socket_impl.hpp
server/include/awaitable/: awaitable.hpp
server/include/env_reader/: env_reader.hpp
server/include/event_manager/: event_manager.hpp
server/include/executor/: executor.hpp
server/include/http/: http.hpp  http_parse.hpp  http_parser.hpp  http_sender.hpp  http_serialize.hpp  http_types.hpp
server/include/scope_manager/: scope_manager.hpp
server/include/server/: server.hpp
server/include/socket/: secure_socket.hpp  socket.hpp  socket_awaitable.hpp  socket_exception.hpp  unix_socket_impl.hpp  windows_socket_impl.hpp
server/include/task/: task.hpp
server/include/thread_safe_queue/: thread_safe_queue.hpp
server/src/: main.cpp
server/src/http/: http_parse.cpp  http_serialize.cpp
server/src/server/: server.cpp
server/src/socket/: unix_socket_impl.cpp  windows_socket_impl.cpp
